# moonlight-kernel

./: .gitignore  LICENSE  Makefile  README.md  kernel_backup.mbt
bridge-python/: README.md  adapter.py  dashboard.py  moonlight.py
bridge-rust/: Cargo.toml
bridge-rust/src/: main.rs  native_kernel.rs
core/: moon.mod.json  moon.pkg.json
core/_build/: packages.json
core/_build/wasm-gc/release/check/: all_pkgs.json
core/lib/: kernel_test.mbt  top.mbt
core/mock_kernel/: Cargo.toml
core/mock_kernel/src/: lib.rs
core/src/lib/: kernel.mbt  kernel_test.mbt  moon.pkg.json  top.mbt
examples/: sim_swarm_learning.py
scripts/: ark_v4_swarm_sim.py  install_and_test.ps1  install_and_test_clean.ps1  synthesize_moonbit_kernel.py
tests/: test_benchmark.py  test_benchmark_v2.py  test_dashboard_render.py  test_enhanced_features.py  test_integration.py  test_kinetic_integrity.py  test_kinetic_optimization.py  test_moonlight_adapter.py  test_moonlight_utils.py  test_native_mode.py  test_veto.py  test_veto_enhanced.py
