[package]
name = "moonlight-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "14.0"
anyhow = "1.0"
# cntr removed due to version mismatch and non-usage

[build-dependencies]
# We would use wit-bindgen here for full component model support
# wit-bindgen-core = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 3
